--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.securesms"
+<manifest package="com.example.securesms"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    
+
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" >
+    </uses-permission>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/securesms"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -24,10 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Smsencrypt"
-            android:label="@string/title_activity_smsencrypt" >
+        <activity android:name=".Smsencrypt">
         </activity>
-    </application>
+        <receiver android:name=".SMSReceiver"></receiver>
+        
+         </application>
 
 </manifest>
